# hidden-cones

./: .gitignore  CMakeLists.txt
src/: cone_energy.cpp  cone_energy.h  cone_validity.cpp  cone_validity.h  generate_flat_cones.cpp  generate_flat_cones.h  generate_optimal_cones.cpp  generate_optimal_cones.h
